--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,4 +1,23 @@
+# Starter pipeline
+# Start with a minimal pipeline that you can customize to build and deploy your code.
+# Add steps that build, run tests, deploy, and more:
+# https://aka.ms/yaml
+
+trigger:
+- master
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+steps:
+- script: echo Hello, world!
 - task: configuredatabricks@0
   inputs:
     url: 'https://adb-5113082355582282.2.azuredatabricks.net/'
-    token: 'dapi7e3eef6f83f2dad3579442b9b2333f59'
+    token: 'dapia94be3966645c88ce2a29b94555c8a89'
+  displayName: 'Run a one-line script'
+
+- script: |
+    echo Add other tasks to build, test, and deploy your project.
+    echo See https://aka.ms/yaml
+  displayName: 'Run a multi-line script'
