Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,7 @@ steps:
 
 - task: executenotebook@0
   inputs:
-    notebookPath: '/dummyNotebook'
+    notebookPath: '''/dummyNotebook'''
     existingClusterId: '0217-142702-merit356'
 
 - script: |
