Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,7 +22,8 @@ steps:
 
 - task: executenotebook@0
   inputs:
-    notebookPath: '/Users/ropombo@microsoft.com/test'
+#    notebookPath: '/Users/ropombo@microsoft.com/test'
+    notebookPath: '/cpu'
     existingClusterId: '0217-142702-merit356'
 
 - script: |
