Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
     addToPath: true
     architecture: 'x64'
 
-- script: $(pyTools.pythonLocation)/bin/pip3 install azure-storage-file-share |
+- script: pip install azure-storage-file-share |
   displayName: 'Install azure-storage-file-share module'
 
 - task: PythonScript@0
