--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,7 +28,7 @@ steps:
       from azure.storage.fileshare import ShareFileClient
       connection_string = "DefaultEndpointsProtocol=https;AccountName=pomboblob;AccountKey='''KdTM0POw4s7Vnm+VUteO8nqe9qut95lhxcnjM8Goc/I0J9OsZyby+nJMI2kjuO5fbsdwkAqEkDgJzs4PDbX+TA==''';EndpointSuffix=core.windows.net"
       file_client = ShareFileClient.from_connection_string(conn_str=connection_string, share_name="pombofs", file_path ="pandas.py")
-      with open("pandas.py", "wb") as file_handle:
+      with open("./my_pandas/pandas.py", "wb") as file_handle:
         data = file_client.download_file()
         data.readinto(file_handle)
       time.sleep(10)
@@ -41,7 +41,7 @@ steps:
 
 - task: deploynotebooks@0
   inputs:
-    notebooksFolderPath: './'
+    notebooksFolderPath: './my_pandas/'
     workspaceFolder: '/Shared'
 
 - task: executenotebook@0
